k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: NodePort
  selector:
    app: django-app
  ports:
    - port: 8080
      targetPort: 8080
      type: ClusterIP
